# nsf2vgm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ansicon.c  ansicon.h  nesapu.c  nesapu.h  nesbus.c  nesbus.h  nescpu.c  nescpu.h  nsf.c  nsf.h  nsf2vgm.c  nsfdump.c  nsfreader.h  nsfreader_file.c  nsfreader_file.h  nsfrip.c  nsfrip.h  nsfrip_vgm.c  nsftime.c  platform.h  rip2vgm.c  rip2vgm.h  test.vgm
lib/cJSON/: CMakeLists.txt
lib/rogueutil/: CMakeLists.txt
test/: airwolf.nsf  ddragon.json  ddragon2.json  ddragon2.nsf  jackal.json  jackal.nsf  kage.json  pow.json  pow.nsf  rush.nsf  superc.nsf  template.json
test/Shadow of the Ninja/: 01.vgm  02 Stage Start.vgm  03.vgm  04.vgm  05.vgm  06.vgm  07.vgm  08.vgm
tools/: vgm2txt  vgm_trim  vgmlpfnd  vgmplay  vgmplay.ini
